NLTK complete parser

--- a/Grammar.ipynb
+++ b/Grammar.ipynb
@@ -16,14 +16,27 @@
     "! pip install midiutil\n",
     "! pip install python-ternary\n",
     "! pip install anytree\n",
-    "! pip install graphviz"
+    "! pip install graphviz\n",
+    "! pip install lark-parser"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 1.9.4\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n",
+      "Playing test.mid\n",
+      "\n",
+      "Saving test.wav\n"
+     ]
+    }
+   ],
    "source": [
     "#Imports\n",
     "import numpy as np\n",
@@ -47,9 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# CONSTANTS\n",
@@ -65,9 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Function which chooses a rule according to the probs\n",
@@ -107,17 +116,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 200.,    0.,    0.,    0.,    0.,    0.,    0.,    0.,    0.,\n",
-       "          0.,    0.,    0.,    0.,    0.,    0.,    0.])"
+       "array([ 1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  0.,  0.,  0.,  1.,\n",
+       "        0.,  0.,  0.])"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,12 +142,12 @@
     "    if (rule == 1):\n",
     "        tree = Node(\"p1\")\n",
     "        tree.children = [\n",
-    "            generate_rhythm(int(size/2), volume*0.98, p1, p2, p4)[1], \n",
-    "            generate_rhythm(int(size/2), volume*0.98, p1, p2, p4)[1]\n",
+    "            generate_rhythm(int(size/2), volume, p1, p2, p4)[1], \n",
+    "            generate_rhythm(int(size/2), volume, p1, p2, p4)[1]\n",
     "        ]\n",
     "        rhythm = np.append( \n",
-    "            generate_rhythm(int(size/2), volume*0.98, p1, p2, p4)[0], \n",
-    "            generate_rhythm(int(size/2), volume*0.98, p1, p2, p4)[0]\n",
+    "            generate_rhythm(int(size/2), volume, p1, p2, p4)[0], \n",
+    "            generate_rhythm(int(size/2), volume, p1, p2, p4)[0]\n",
     "        )\n",
     "    if (rule == 2):\n",
     "        tree = Node(\"p2\")\n",
@@ -148,13 +157,13 @@
     "\n",
     "    return rhythm, tree\n",
     "\n",
-    "rhythm = generate_rhythm(L, 200, p1, p2)[0]\n",
+    "rhythm = generate_rhythm(L, 1, p1, p2)[0]\n",
     "rhythm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -163,27 +172,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Node('/p1')\n",
-      "├── Node('/p1/p1')\n",
-      "│   ├── Node('/p1/p1/p1')\n",
-      "│   │   ├── Node('/p1/p1/p1/p2')\n",
-      "│   │   └── Node('/p1/p1/p1/p1')\n",
-      "│   │       ├── Node('/p1/p1/p1/p1/p4')\n",
-      "│   │       └── Node('/p1/p1/p1/p1/p4')\n",
-      "│   └── Node('/p1/p1/p1')\n",
-      "│       ├── Node('/p1/p1/p1/p1')\n",
-      "│       │   ├── Node('/p1/p1/p1/p1/p4')\n",
-      "│       │   └── Node('/p1/p1/p1/p1/p4')\n",
-      "│       └── Node('/p1/p1/p1/p1')\n",
-      "│           ├── Node('/p1/p1/p1/p1/p4')\n",
-      "│           └── Node('/p1/p1/p1/p1/p4')\n",
-      "└── Node('/p1/p2')\n",
-      "[p1[p1[p1[p2][p1[p4][p4]]][p1[p1[p4][p4]][p1[p4][p4]]]][p2]]\n"
+      "Node('/p2')\n",
+      "[p2]\n"
      ]
     }
    ],
    "source": [
-    "# Convert a rhythm sequence into a tree of rules!\n",
+    "# Homemade parser: Convert a rhythm sequence into a tree of rules!\n",
     "def rhythm_parser(rhythm):\n",
     "    size = len(rhythm)\n",
     "    np.place(rhythm, rhythm>0, 1) # 1s instead of volume\n",
@@ -223,41 +218,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(ROOT\n",
-      "  (X16\n",
-      "    (1 x)\n",
-      "    (0 -)\n",
-      "    (0 -)\n",
-      "    (0 -)\n",
-      "    (0 -)\n",
-      "    (0 -)\n",
-      "    (0 -)\n",
-      "    (0 -)\n",
-      "    (0 -)\n",
-      "    (0 -)\n",
-      "    (0 -)\n",
-      "    (0 -)\n",
-      "    (0 -)\n",
-      "    (0 -)\n",
-      "    (0 -)\n",
-      "    (0 -))) (p=0.5)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# NLTK parser\n",
+    "import nltk\n",
     "\n",
-    "from nltk import PCFG\n",
-    "from nltk import parse\n",
-    "\n",
-    "my_pcfg = PCFG.fromstring(\"\"\" \n",
+    "my_pcfg = nltk.PCFG.fromstring(\"\"\" \n",
     "ROOT -> N1 N1 [0.4] | X16 [0.5] | Y16 [0.1] \n",
     "N1   -> N2 N2 [0.4] | X8  [0.5] | Y8  [0.1] \n",
     "N2   -> N3 N3 [0.4] | X4  [0.5] | Y4  [0.1] \n",
@@ -275,18 +243,17 @@
     "X1 -> 1 [1]\n",
     "Y1 -> 0 [1]\n",
     "\n",
-    "1 -> 'x' [1]\n",
-    "0 -> '-' [1]\n",
-    "\n",
+    "1 -> '1' [1]\n",
+    "0 -> '0' [1]\n",
     "\"\"\")\n",
     "\n",
-    "viterbi_parser = parse.ViterbiParser(my_pcfg)\n",
+    "sent=rhythm.astype(int).astype(str)\n",
+    "rd_parser = nltk.RecursiveDescentParser(my_pcfg)\n",
     "\n",
-    "text = list('x---------------')\n",
-    "\n",
-    "\n",
-    "for tree in viterbi_parser.parse_all(text):\n",
-    "    print (tree)"
+    "#for tree in rd_parser.parse(sent):\n",
+    "#    print(tree)\n",
+    "    \n",
+    "trees = list(rd_parser.parse(sent))"
    ]
   },
   {
@@ -350,14 +317,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Find the number of trees for one rhythm\n",
-    "def find_trees(rhythm):\n",
+    "def number_trees_one_rhythm(rhythm):\n",
     "    size = len(rhythm)\n",
     "    np.place(rhythm, rhythm>0, 1) # 1s instead of volume\n",
     "    \n",
@@ -369,18 +334,18 @@
     "        return 1\n",
     "    # p2\n",
     "    elif(rhythm[0] != 0 and np.all(rhythm[1:] == 0)):\n",
-    "        return 1 + find_trees(rhythm[:int(size/2)]) * find_trees(rhythm[int(size/2):])\n",
+    "        return 1 + number_trees_one_rhythm(rhythm[:int(size/2)]) * number_trees_one_rhythm(rhythm[int(size/2):])\n",
     "    # p3\n",
     "    elif(np.all(rhythm == 0)):\n",
-    "        return 1 + find_trees(rhythm[:int(size/2)]) * find_trees(rhythm[int(size/2):])\n",
+    "        return 1 + number_trees_one_rhythm(rhythm[:int(size/2)]) * number_trees_one_rhythm(rhythm[int(size/2):])\n",
     "    # p1\n",
     "    else:\n",
-    "        return find_trees(rhythm[:int(size/2)]) * find_trees(rhythm[int(size/2):])\n",
+    "        return number_trees_one_rhythm(rhythm[:int(size/2)]) * number_trees_one_rhythm(rhythm[int(size/2):])\n",
     "\n",
     "# INCORRECT Probability of a rhythm to be played (not taking p1 and p2 in account !!!!!!)\n",
     "def prob_rhythm(rhythm):\n",
     "    size = len(rhythm)\n",
-    "    realisations = find_trees(rhythm)\n",
+    "    realisations = number_trees_one_rhythm(rhythm)\n",
     "    total = number_trees(size)\n",
     "    return realisations/total"
    ]
@@ -950,7 +915,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
