--- a/Grammar.ipynb
+++ b/Grammar.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,11 @@
     "\n",
     "p1 = 0.725 # Split 2 prob\n",
     "p2 = 0.275 # Play beat prob (p3 is computed automatically)\n",
-    "p4 = 1 # Play beat in final level; NOT MANDATORY, can be automatic if not defined "
+    "p4 = 1 # Play beat in final level; NOT MANDATORY, can be automatic if not defined \n",
+    "\n",
+    "# Auto compute\n",
+    "p3 = 1 - p2 - p1\n",
+    "p5 = 1 - p4"
    ]
   },
   {
@@ -225,14 +229,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5221483117445169\n"
+      "0.275\n"
      ]
     }
    ],
@@ -240,12 +244,12 @@
     "# NLTK parser\n",
     "import nltk\n",
     "\n",
-    "rhythm_16 = nltk.PCFG.fromstring(\"\"\" \n",
-    "P16 -> P8 P8 [0.4] | X16 [0.5] | Y16 [0.1] \n",
-    "P8  -> P4 P4 [0.4] | X8  [0.5] | Y8  [0.1] \n",
-    "P4  -> P2 P2 [0.4] | X4  [0.5] | Y4  [0.1] \n",
-    "P2  -> P1 P1 [0.4] | X2  [0.5] | Y2  [0.1] \n",
-    "P1  -> X1  [0.5] | Y1  [0.5] \n",
+    "grammar = f\"\"\" \n",
+    "P16 -> P8 P8 [{p1}] | X16 [{p2}] | Y16 [{p3}] \n",
+    "P8  -> P4 P4 [{p1}] | X8  [{p2}] | Y8  [{p3}] \n",
+    "P4  -> P2 P2 [{p1}] | X4  [{p2}] | Y4  [{p3}] \n",
+    "P2  -> P1 P1 [{p1}] | X2  [{p2}] | Y2  [{p3}] \n",
+    "P1  -> X1    [{p4}] | Y1  [{p5}]\n",
     "\n",
     "X16 -> '1' '0' '0' '0' '0' '0' '0' '0' '0' '0' '0' '0' '0' '0' '0' '0' [1]\n",
     "Y16 -> '0' '0' '0' '0' '0' '0' '0' '0' '0' '0' '0' '0' '0' '0' '0' '0' [1]\n",
@@ -257,10 +261,13 @@
     "Y2 ->  '0' '0' [1]\n",
     "X1 ->  '1' [1]\n",
     "Y1 ->  '0' [1]\n",
-    "\"\"\")\n",
+    "\"\"\" \n",
+    "\n",
+    "rhythm_16 = nltk.PCFG.fromstring(grammar)\n",
     "\n",
     "sent=rhythm.astype(int).astype(str)\n",
     "rd_parser = nltk.UnsortedChartParser(rhythm_16)\n",
+    "\n",
     "prob = 0\n",
     "for tree in rd_parser.parse(sent):\n",
     "    prob += tree.prob()\n",
