--- a/Grammar.ipynb
+++ b/Grammar.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,8 +75,8 @@
     "N = int(np.log2(L)+1) # Number of levels (including 0)\n",
     "bpm = 400 # bpm\n",
     "\n",
-    "p1 = 0.725 # Split 2 prob\n",
-    "p2 = 0.275 # Play beat prob (p3 is computed automatically)\n",
+    "p1 = 0.775 # Split 2 prob\n",
+    "p2 = 0.2 # Play beat prob (p3 is computed automatically)\n",
     "p4 = 1 # Play beat in final level; NOT MANDATORY, can be automatic if not defined \n",
     "\n",
     "# Auto compute\n",
@@ -86,17 +86,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-       "        0.,  0.,  0.])"
+       "array([ 1.,  1.,  1.,  1.,  1.,  0.,  0.,  0.,  0.,  0.,  1.,  1.,  0.,\n",
+       "        0.,  1.,  0.])"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -183,8 +183,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Node('/p2')\n",
-      "[p2]\n"
+      "Node('/p1')\n",
+      "├── Node('/p1/p1')\n",
+      "│   ├── Node('/p1/p1/p1')\n",
+      "│   │   ├── Node('/p1/p1/p1/p1')\n",
+      "│   │   │   ├── Node('/p1/p1/p1/p1/p4')\n",
+      "│   │   │   └── Node('/p1/p1/p1/p1/p4')\n",
+      "│   │   └── Node('/p1/p1/p1/p1')\n",
+      "│   │       ├── Node('/p1/p1/p1/p1/p4')\n",
+      "│   │       └── Node('/p1/p1/p1/p1/p4')\n",
+      "│   └── Node('/p1/p1/p2')\n",
+      "└── Node('/p1/p1')\n",
+      "    ├── Node('/p1/p1/p1')\n",
+      "    │   ├── Node('/p1/p1/p1/p3')\n",
+      "    │   └── Node('/p1/p1/p1/p1')\n",
+      "    │       ├── Node('/p1/p1/p1/p1/p4')\n",
+      "    │       └── Node('/p1/p1/p1/p1/p4')\n",
+      "    └── Node('/p1/p1/p1')\n",
+      "        ├── Node('/p1/p1/p1/p3')\n",
+      "        └── Node('/p1/p1/p1/p2')\n",
+      "[p1[p1[p1[p1[p4][p4]][p1[p4][p4]]][p2]][p1[p1[p3][p1[p4][p4]]][p1[p3][p2]]]]\n"
      ]
     }
    ],
@@ -229,14 +247,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.275\n"
+      "0.009571596982770604\n"
      ]
     }
    ],
@@ -395,6 +413,27 @@
    "source": [
     "np.save('probs_by_rhythm', all_probs)\n",
     "np.savetxt('probs_by_rhythm.txt', all_probs, delimiter=',') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.516880330045558"
+      ]
+     },
+     "execution_count": 226,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Entropy\n",
+    "-np.sum(all_probs * np.log(all_probs))"
    ]
   },
   {
