--- a/Grammar.ipynb
+++ b/Grammar.ipynb
@@ -173,139 +173,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([['[p1[p1[p2][p1]][p1[p2][p1]]]', '2', '2'],\n",
-       "       ['[p1[p1[p1][p2]][p3]]', '1', '1'],\n",
-       "       ['[p1[p1[p2][p3]][p1[p2][p1]]]', '1', '2'],\n",
-       "       ['[p1[p1[p1][p2]][p1[p3][p1]]]', '2', '1'],\n",
-       "       ['[p1[p1[p1][p1]][p1[p3][p1]]]', '3', '0'],\n",
-       "       ['[p1[p1[p1][p2]][p1[p3][p2]]]', '1', '2'],\n",
-       "       ['[p1[p1[p3][p2]][p1[p3][p3]]]', '0', '1'],\n",
-       "       ['[p1[p1[p3][p1]][p1[p1][p1]]]', '3', '0'],\n",
-       "       ['[p1[p1[p2][p1]][p1[p2][p3]]]', '1', '2'],\n",
-       "       ['[p1[p1[p3][p1]][p1[p1][p2]]]', '2', '1'],\n",
-       "       ['[p1[p2][p1[p3][p3]]]', '0', '1'],\n",
-       "       ['[p1[p1[p1][p1]][p1[p2][p2]]]', '2', '2'],\n",
-       "       ['[p1[p1[p1][p2]][p1[p3][p3]]]', '1', '1'],\n",
-       "       ['[p1[p1[p3][p3]][p1[p2][p3]]]', '0', '1'],\n",
-       "       ['[p1[p1[p3][p2]][p1[p3][p2]]]', '0', '2'],\n",
-       "       ['[p1[p1[p2][p1]][p1[p1][p3]]]', '2', '1'],\n",
-       "       ['[p1[p1[p1][p3]][p1[p2][p2]]]', '1', '2'],\n",
-       "       ['[p1[p1[p1][p1]][p1[p2][p1]]]', '3', '1'],\n",
-       "       ['[p1[p2][p1[p2][p2]]]', '0', '3'],\n",
-       "       ['[p1[p1[p1][p3]][p1[p1][p3]]]', '2', '0'],\n",
-       "       ['[p1[p1[p2][p1]][p3]]', '1', '1'],\n",
-       "       ['[p1[p1[p3][p2]][p1[p3][p1]]]', '1', '1'],\n",
-       "       ['[p1[p1[p3][p1]][p3]]', '1', '0'],\n",
-       "       ['[p1[p1[p2][p3]][p1[p1][p3]]]', '1', '1'],\n",
-       "       ['[p1[p3][p3]]', '0', '0'],\n",
-       "       ['[p1[p1[p1][p1]][p3]]', '2', '0'],\n",
-       "       ['[p1[p1[p3][p1]][p1[p2][p3]]]', '1', '1'],\n",
-       "       ['[p1[p1[p3][p1]][p1[p3][p2]]]', '1', '1'],\n",
-       "       ['[p1[p1[p1][p1]][p1[p3][p2]]]', '2', '1'],\n",
-       "       ['[p1[p1[p2][p3]][p1[p2][p2]]]', '0', '3'],\n",
-       "       ['[p1[p1[p3][p3]][p1[p1][p1]]]', '2', '0'],\n",
-       "       ['[p1[p2][p1[p3][p1]]]', '1', '1'],\n",
-       "       ['[p1[p1[p1][p2]][p1[p1][p2]]]', '2', '2'],\n",
-       "       ['[p1[p1[p1][p1]][p1[p1][p1]]]', '4', '0'],\n",
-       "       ['[p1[p1[p1][p3]][p1[p2][p1]]]', '2', '1'],\n",
-       "       ['[p1[p3][p2]]', '0', '1'],\n",
-       "       ['[p1[p3][p1[p2][p1]]]', '1', '1'],\n",
-       "       ['[p1[p2][p1[p3][p2]]]', '0', '2'],\n",
-       "       ['[p1[p3][p1[p3][p2]]]', '0', '1'],\n",
-       "       ['[p1[p1[p3][p1]][p1[p3][p3]]]', '1', '0'],\n",
-       "       ['[p1[p3][p1[p3][p1]]]', '1', '0'],\n",
-       "       ['[p1[p2][p1[p1][p3]]]', '1', '1'],\n",
-       "       ['[p1[p1[p3][p2]][p1[p2][p3]]]', '0', '2'],\n",
-       "       ['[p1[p1[p2][p2]][p1[p2][p2]]]', '0', '4'],\n",
-       "       ['[p1[p1[p1][p2]][p1[p1][p1]]]', '3', '1'],\n",
-       "       ['[p1[p1[p2][p2]][p1[p3][p2]]]', '0', '3'],\n",
-       "       ['[p1[p1[p1][p3]][p2]]', '1', '1'],\n",
-       "       ['[p1[p1[p3][p1]][p1[p1][p3]]]', '2', '0'],\n",
-       "       ['[p1[p1[p1][p3]][p1[p1][p2]]]', '2', '1'],\n",
-       "       ['[p1[p1[p2][p1]][p2]]', '1', '2'],\n",
-       "       ['[p1[p1[p3][p3]][p1[p3][p3]]]', '0', '0'],\n",
-       "       ['[p1[p1[p1][p3]][p1[p1][p1]]]', '3', '0'],\n",
-       "       ['[p2]', '0', '1'],\n",
-       "       ['[p1[p3][p1[p1][p1]]]', '2', '0'],\n",
-       "       ['[p1[p1[p2][p1]][p1[p2][p2]]]', '1', '3'],\n",
-       "       ['[p1[p1[p2][p3]][p1[p3][p3]]]', '0', '1'],\n",
-       "       ['[p1[p1[p2][p2]][p1[p1][p1]]]', '2', '2'],\n",
-       "       ['[p1[p1[p3][p1]][p1[p3][p1]]]', '2', '0'],\n",
-       "       ['[p1[p1[p2][p3]][p3]]', '0', '1'],\n",
-       "       ['[p1[p3][p1[p2][p2]]]', '0', '2'],\n",
-       "       ['[p1[p1[p3][p2]][p1[p2][p1]]]', '1', '2'],\n",
-       "       ['[p1[p1[p2][p2]][p2]]', '0', '3'],\n",
-       "       ['[p1[p1[p2][p1]][p1[p3][p3]]]', '1', '1'],\n",
-       "       ['[p1[p1[p2][p3]][p1[p1][p1]]]', '2', '1'],\n",
-       "       ['[p1[p2][p1[p1][p1]]]', '2', '1'],\n",
-       "       ['[p1[p3][p1[p3][p3]]]', '0', '0'],\n",
-       "       ['[p1[p1[p1][p1]][p1[p1][p3]]]', '3', '0'],\n",
-       "       ['[p1[p1[p3][p2]][p1[p2][p2]]]', '0', '3'],\n",
-       "       ['[p1[p1[p2][p2]][p1[p3][p1]]]', '1', '2'],\n",
-       "       ['[p1[p1[p1][p3]][p1[p3][p3]]]', '1', '0'],\n",
-       "       ['[p1[p1[p2][p2]][p1[p1][p2]]]', '1', '3'],\n",
-       "       ['[p1[p1[p1][p3]][p1[p3][p1]]]', '2', '0'],\n",
-       "       ['[p1[p3][p1[p1][p2]]]', '1', '1'],\n",
-       "       ['[p1[p1[p3][p1]][p1[p2][p2]]]', '1', '2'],\n",
-       "       ['[p1[p2][p2]]', '0', '2'],\n",
-       "       ['[p1[p1[p3][p3]][p1[p1][p3]]]', '1', '0'],\n",
-       "       ['[p1[p1[p1][p3]][p1[p2][p3]]]', '1', '1'],\n",
-       "       ['[p1[p1[p2][p2]][p1[p2][p1]]]', '1', '3'],\n",
-       "       ['[p1[p1[p2][p2]][p1[p2][p3]]]', '0', '3'],\n",
-       "       ['[p1[p1[p3][p2]][p2]]', '0', '2'],\n",
-       "       ['[p1[p1[p1][p2]][p1[p2][p2]]]', '1', '3'],\n",
-       "       ['[p1[p2][p3]]', '0', '1'],\n",
-       "       ['[p1[p1[p3][p3]][p1[p3][p2]]]', '0', '1'],\n",
-       "       ['[p1[p1[p2][p2]][p1[p3][p3]]]', '0', '2'],\n",
-       "       ['[p1[p1[p1][p1]][p1[p3][p3]]]', '2', '0'],\n",
-       "       ['[p1[p2][p1[p2][p3]]]', '0', '2'],\n",
-       "       ['[p1[p1[p2][p1]][p1[p3][p1]]]', '2', '1'],\n",
-       "       ['[p1[p1[p3][p1]][p2]]', '1', '1'],\n",
-       "       ['[p1[p1[p1][p1]][p2]]', '2', '1'],\n",
-       "       ['[p1[p1[p2][p1]][p1[p1][p1]]]', '3', '1'],\n",
-       "       ['[p1[p1[p2][p1]][p1[p3][p2]]]', '1', '2'],\n",
-       "       ['[p1[p1[p3][p2]][p3]]', '0', '1'],\n",
-       "       ['[p1[p1[p2][p3]][p1[p3][p1]]]', '1', '1'],\n",
-       "       ['[p1[p1[p1][p2]][p1[p2][p3]]]', '1', '2'],\n",
-       "       ['[p1[p1[p2][p3]][p1[p3][p2]]]', '0', '2'],\n",
-       "       ['[p1[p3][p1[p2][p3]]]', '0', '1'],\n",
-       "       ['[p1[p1[p3][p3]][p3]]', '0', '0'],\n",
-       "       ['[p1[p1[p1][p2]][p1[p1][p3]]]', '2', '1'],\n",
-       "       ['[p1[p1[p3][p3]][p2]]', '0', '1'],\n",
-       "       ['[p1[p1[p1][p3]][p1[p3][p2]]]', '1', '1'],\n",
-       "       ['[p1[p1[p2][p2]][p1[p1][p3]]]', '1', '2'],\n",
-       "       ['[p1[p1[p2][p1]][p1[p1][p2]]]', '2', '2'],\n",
-       "       ['[p3]', '0', '0'],\n",
-       "       ['[p1[p1[p1][p3]][p3]]', '1', '0'],\n",
-       "       ['[p1[p1[p3][p3]][p1[p2][p2]]]', '0', '2'],\n",
-       "       ['[p1[p1[p3][p1]][p1[p2][p1]]]', '2', '1'],\n",
-       "       ['[p1[p1[p3][p2]][p1[p1][p2]]]', '1', '2'],\n",
-       "       ['[p1[p1[p1][p2]][p2]]', '1', '2'],\n",
-       "       ['[p1[p1[p3][p3]][p1[p1][p2]]]', '1', '1'],\n",
-       "       ['[p1[p1[p3][p2]][p1[p1][p1]]]', '2', '1'],\n",
-       "       ['[p1[p3][p1[p1][p3]]]', '1', '0'],\n",
-       "       ['[p1[p1[p3][p3]][p1[p3][p1]]]', '1', '0'],\n",
-       "       ['[p1[p1[p1][p1]][p1[p1][p2]]]', '3', '1'],\n",
-       "       ['[p1[p1[p2][p3]][p1[p1][p2]]]', '1', '2'],\n",
-       "       ['[p1[p1[p1][p2]][p1[p2][p1]]]', '2', '2'],\n",
-       "       ['[p1[p1[p3][p2]][p1[p1][p3]]]', '1', '1'],\n",
-       "       ['[p1[p1[p2][p2]][p3]]', '0', '2'],\n",
-       "       ['[p1[p1[p1][p1]][p1[p2][p3]]]', '2', '1'],\n",
-       "       ['[p1[p1[p2][p3]][p1[p2][p3]]]', '0', '2'],\n",
-       "       ['[p1[p2][p1[p1][p2]]]', '1', '2'],\n",
-       "       ['[p1[p1[p2][p3]][p2]]', '0', '2'],\n",
-       "       ['[p1[p2][p1[p2][p1]]]', '1', '2'],\n",
-       "       ['[p1[p1[p3][p3]][p1[p2][p1]]]', '1', '1']],\n",
+       "array([['[p1[p1[p2][p1]][p1[p2][p1]]]', '2', '2', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p1][p2]][p3]]', '1', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p2][p3]][p1[p2][p1]]]', '1', '2', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p1][p2]][p1[p3][p1]]]', '2', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p1][p1]][p1[p3][p1]]]', '3', '0', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p1][p2]][p1[p3][p2]]]', '1', '2', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p3][p2]][p1[p3][p3]]]', '0', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p3][p1]][p1[p1][p1]]]', '3', '0', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p2][p1]][p1[p2][p3]]]', '1', '2', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p3][p1]][p1[p1][p2]]]', '2', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p2][p1[p3][p3]]]', '0', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p1][p1]][p1[p2][p2]]]', '2', '2', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p1][p2]][p1[p3][p3]]]', '1', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p3][p3]][p1[p2][p3]]]', '0', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p3][p2]][p1[p3][p2]]]', '0', '2', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p2][p1]][p1[p1][p3]]]', '2', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p1][p3]][p1[p2][p2]]]', '1', '2', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p1][p1]][p1[p2][p1]]]', '3', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p2][p1[p2][p2]]]', '0', '3', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p1][p3]][p1[p1][p3]]]', '2', '0', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p2][p1]][p3]]', '1', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p3][p2]][p1[p3][p1]]]', '1', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p3][p1]][p3]]', '1', '0', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p2][p3]][p1[p1][p3]]]', '1', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p3][p3]]', '0', '0', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p1][p1]][p3]]', '2', '0', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p3][p1]][p1[p2][p3]]]', '1', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p3][p1]][p1[p3][p2]]]', '1', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p1][p1]][p1[p3][p2]]]', '2', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p2][p3]][p1[p2][p2]]]', '0', '3', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p3][p3]][p1[p1][p1]]]', '2', '0', '0.0', '0.0'],\n",
+       "       ['[p1[p2][p1[p3][p1]]]', '1', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p1][p2]][p1[p1][p2]]]', '2', '2', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p1][p1]][p1[p1][p1]]]', '4', '0', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p1][p3]][p1[p2][p1]]]', '2', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p3][p2]]', '0', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p3][p1[p2][p1]]]', '1', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p2][p1[p3][p2]]]', '0', '2', '0.0', '0.0'],\n",
+       "       ['[p1[p3][p1[p3][p2]]]', '0', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p3][p1]][p1[p3][p3]]]', '1', '0', '0.0', '0.0'],\n",
+       "       ['[p1[p3][p1[p3][p1]]]', '1', '0', '0.0', '0.0'],\n",
+       "       ['[p1[p2][p1[p1][p3]]]', '1', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p3][p2]][p1[p2][p3]]]', '0', '2', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p2][p2]][p1[p2][p2]]]', '0', '4', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p1][p2]][p1[p1][p1]]]', '3', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p2][p2]][p1[p3][p2]]]', '0', '3', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p1][p3]][p2]]', '1', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p3][p1]][p1[p1][p3]]]', '2', '0', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p1][p3]][p1[p1][p2]]]', '2', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p2][p1]][p2]]', '1', '2', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p3][p3]][p1[p3][p3]]]', '0', '0', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p1][p3]][p1[p1][p1]]]', '3', '0', '0.0', '0.0'],\n",
+       "       ['[p2]', '0', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p3][p1[p1][p1]]]', '2', '0', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p2][p1]][p1[p2][p2]]]', '1', '3', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p2][p3]][p1[p3][p3]]]', '0', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p2][p2]][p1[p1][p1]]]', '2', '2', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p3][p1]][p1[p3][p1]]]', '2', '0', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p2][p3]][p3]]', '0', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p3][p1[p2][p2]]]', '0', '2', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p3][p2]][p1[p2][p1]]]', '1', '2', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p2][p2]][p2]]', '0', '3', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p2][p1]][p1[p3][p3]]]', '1', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p2][p3]][p1[p1][p1]]]', '2', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p2][p1[p1][p1]]]', '2', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p3][p1[p3][p3]]]', '0', '0', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p1][p1]][p1[p1][p3]]]', '3', '0', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p3][p2]][p1[p2][p2]]]', '0', '3', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p2][p2]][p1[p3][p1]]]', '1', '2', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p1][p3]][p1[p3][p3]]]', '1', '0', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p2][p2]][p1[p1][p2]]]', '1', '3', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p1][p3]][p1[p3][p1]]]', '2', '0', '0.0', '0.0'],\n",
+       "       ['[p1[p3][p1[p1][p2]]]', '1', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p3][p1]][p1[p2][p2]]]', '1', '2', '0.0', '0.0'],\n",
+       "       ['[p1[p2][p2]]', '0', '2', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p3][p3]][p1[p1][p3]]]', '1', '0', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p1][p3]][p1[p2][p3]]]', '1', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p2][p2]][p1[p2][p1]]]', '1', '3', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p2][p2]][p1[p2][p3]]]', '0', '3', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p3][p2]][p2]]', '0', '2', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p1][p2]][p1[p2][p2]]]', '1', '3', '0.0', '0.0'],\n",
+       "       ['[p1[p2][p3]]', '0', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p3][p3]][p1[p3][p2]]]', '0', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p2][p2]][p1[p3][p3]]]', '0', '2', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p1][p1]][p1[p3][p3]]]', '2', '0', '0.0', '0.0'],\n",
+       "       ['[p1[p2][p1[p2][p3]]]', '0', '2', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p2][p1]][p1[p3][p1]]]', '2', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p3][p1]][p2]]', '1', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p1][p1]][p2]]', '2', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p2][p1]][p1[p1][p1]]]', '3', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p2][p1]][p1[p3][p2]]]', '1', '2', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p3][p2]][p3]]', '0', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p2][p3]][p1[p3][p1]]]', '1', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p1][p2]][p1[p2][p3]]]', '1', '2', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p2][p3]][p1[p3][p2]]]', '0', '2', '0.0', '0.0'],\n",
+       "       ['[p1[p3][p1[p2][p3]]]', '0', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p3][p3]][p3]]', '0', '0', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p1][p2]][p1[p1][p3]]]', '2', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p3][p3]][p2]]', '0', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p1][p3]][p1[p3][p2]]]', '1', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p2][p2]][p1[p1][p3]]]', '1', '2', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p2][p1]][p1[p1][p2]]]', '2', '2', '0.0', '0.0'],\n",
+       "       ['[p3]', '0', '0', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p1][p3]][p3]]', '1', '0', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p3][p3]][p1[p2][p2]]]', '0', '2', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p3][p1]][p1[p2][p1]]]', '2', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p3][p2]][p1[p1][p2]]]', '1', '2', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p1][p2]][p2]]', '1', '2', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p3][p3]][p1[p1][p2]]]', '1', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p3][p2]][p1[p1][p1]]]', '2', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p3][p1[p1][p3]]]', '1', '0', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p3][p3]][p1[p3][p1]]]', '1', '0', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p1][p1]][p1[p1][p2]]]', '3', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p2][p3]][p1[p1][p2]]]', '1', '2', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p1][p2]][p1[p2][p1]]]', '2', '2', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p3][p2]][p1[p1][p3]]]', '1', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p2][p2]][p3]]', '0', '2', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p1][p1]][p1[p2][p3]]]', '2', '1', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p2][p3]][p1[p2][p3]]]', '0', '2', '0.0', '0.0'],\n",
+       "       ['[p1[p2][p1[p1][p2]]]', '1', '2', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p2][p3]][p2]]', '0', '2', '0.0', '0.0'],\n",
+       "       ['[p1[p2][p1[p2][p1]]]', '1', '2', '0.0', '0.0'],\n",
+       "       ['[p1[p1[p3][p3]][p1[p2][p1]]]', '1', '1', '0.0', '0.0']],\n",
        "      dtype='<U32')"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,13 +335,14 @@
     "    for elem2 in templates_2:\n",
     "        templates_3.add(f\"[p1{elem1}{elem2}]\")\n",
     "        \n",
-    "templates = np.dstack((np.asarray(list(templates_3)), np.zeros(len(templates_3)), np.zeros(len(templates_3))))[0]\n",
+    "templates = np.dstack((np.asarray(list(templates_3)), np.zeros(len(templates_3)), np.zeros(len(templates_3)), np.zeros(len(templates_3)), np.zeros(len(templates_3))))[0]\n",
     "\n",
     "for template in templates:\n",
     "    template[1] = template[0].count('[p1]')\n",
     "    template[2] = template[0].count('[p2]')\n",
     "    \n",
-    "# Templates is the list of all templates in the form (Lieck syntax, #non-terminals, #terminals)\n",
+    "# Templates is the list of all templates in the form (Lieck syntax, #non-terminals, #terminals, entropy, ENB)\n",
+    "np.save('files/templates', templates)\n",
     "templates"
    ]
   },
@@ -591,8 +592,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save('probs_by_rhythm', all_probs)\n",
-    "np.savetxt('probs_by_rhythm.txt', all_probs, delimiter=',') "
+    "np.save('files/probs_by_rhythm', all_probs)\n",
+    "np.savetxt('files/probs_by_rhythm.txt', all_probs, delimiter=',') "
    ]
   },
   {
