--- a/Theano entropy and expected.ipynb
+++ b/Theano entropy and expected.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -26,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,13 +79,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Actual functions for entropy and ENB for level-3 template\n",
     "H3 = function([non_terminals, p1, p2, p3, p4, p5], H3s)\n",
     "E3 = function([non_terminals, terminals, p1, p2, p4, p5], E3s) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load all templates with #(non-) terminals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['2', '1', '2', '1', '0', '2', '1', '0', '2', '1', '1', '2', '1',\n",
+       "       '1', '2', '1', '2', '1', '3', '0', '1', '1', '0', '1', '0', '0',\n",
+       "       '1', '1', '1', '3', '0', '1', '2', '0', '1', '1', '1', '2', '1',\n",
+       "       '0', '0', '1', '2', '4', '1', '3', '1', '0', '1', '2', '0', '0',\n",
+       "       '1', '0', '3', '1', '2', '0', '1', '2', '2', '3', '1', '1', '1',\n",
+       "       '0', '0', '3', '2', '0', '3', '0', '1', '2', '2', '0', '1', '3',\n",
+       "       '3', '2', '3', '1', '1', '2', '0', '2', '1', '1', '1', '1', '2',\n",
+       "       '1', '1', '2', '2', '1', '0', '1', '1', '1', '2', '2', '0', '0',\n",
+       "       '2', '1', '2', '2', '1', '1', '0', '0', '1', '2', '2', '1', '2',\n",
+       "       '1', '2', '2', '2', '2', '1'],\n",
+       "      dtype='<U32')"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "templates = np.load(\"files/templates.npy\")\n",
+    "templates[:,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "setting an array element with a sequence",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-19-19c8b605982e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mtemplate\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtemplates\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mtemplate\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mH3\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m: setting an array element with a sequence"
+     ]
+    }
+   ],
+   "source": [
+    "for template in templates:\n",
+    "    template[3] = H3"
    ]
   },
   {
