2way dict between trees and rhythms

--- a/Pipeline.ipynb
+++ b/Pipeline.ipynb
@@ -2,15 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "pygame 1.9.4\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+      "WARNING (theano.configdefaults): g++ not available, if using conda: `conda install m2w64-toolchain`\n",
+      "C:\\Users\\Spouep\\Anaconda3\\lib\\site-packages\\theano\\configdefaults.py:560: UserWarning: DeprecationWarning: there is no c++ compiler.This is deprecated and with Theano 0.11 a c++ compiler will be mandatory\n",
+      "  warnings.warn(\"DeprecationWarning: there is no c++ compiler.\"\n",
+      "WARNING (theano.configdefaults): g++ not detected ! Theano will be unable to execute optimized C-implementations (for both CPU and GPU) and will default to Python implementations. Performance will be severely degraded. To remove this warning, set Theano flags cxx to an empty string.\n",
+      "WARNING (theano.tensor.blas): Using NumPy C-API based implementation for BLAS functions.\n"
      ]
     }
    ],
@@ -25,6 +28,8 @@
     "import anytree as at\n",
     "from anytree import Node, RenderTree\n",
     "from anytree.exporter import DotExporter\n",
+    "import theano.tensor as T\n",
+    "from theano import function\n",
     "\n",
     "# helpers\n",
     "import sys\n",
@@ -38,29 +43,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# CONSTANTS\n",
+    "L = 16 # length of measure\n",
+    "N = int(np.log2(L)+1) # Number of levels (including 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initial THEANO symbolic variables\n",
+    "\n",
+    "p1 = T.dscalar('p1')\n",
+    "p2 = T.dscalar('p2')\n",
+    "p3 = T.dscalar('p3')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Set of all trees"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2090918"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# Templates level 1\n",
     "templates_1 = set()\n",
-    "templates_1.add(\"[p1]\")\n",
-    "templates_1.add(\"[p2]\")\n",
-    "templates_1.add(\"[p3]\")\n",
+    "templates_1.add(p2)\n",
+    "templates_1.add(p3)\n",
     "\n",
     "# Templates level 2\n",
     "templates_2 = set()\n",
-    "templates_2.add(\"[p2]\")\n",
-    "templates_2.add(\"[p3]\")\n",
+    "templates_2.add(p2)\n",
+    "templates_2.add(p3)\n",
     "\n",
     "for elem1 in templates_1:\n",
     "    for elem2 in templates_1:\n",
     "        templates_2.add((elem1, elem2))\n",
-    "\n",
+    "        \n",
     "# Templates level 3\n",
     "templates_3 = set()\n",
-    "templates_3.add(\"[p2]\")\n",
-    "templates_3.add(\"[p3]\")\n",
+    "templates_3.add(p2)\n",
+    "templates_3.add(p3)\n",
     "\n",
     "for elem1 in templates_2:\n",
     "    for elem2 in templates_2:\n",
@@ -68,52 +114,132 @@
     "        \n",
     "# Templates level 4\n",
     "templates_4 = set()\n",
-    "templates_4.add(\"[p2]\")\n",
-    "templates_4.add(\"[p3]\")\n",
+    "templates_4.add(p2)\n",
+    "templates_4.add(p3)\n",
     "\n",
     "for elem1 in templates_3:\n",
     "    for elem2 in templates_3:\n",
     "        templates_4.add((elem1, elem2))\n",
     "        \n",
     "# Templates level 5\n",
-    "templates_5 = set()\n",
-    "templates_5.add(\"[p2]\")\n",
-    "templates_5.add(\"[p3]\")\n",
+    "all_trees = set()\n",
+    "all_trees.add(p2)\n",
+    "all_trees.add(p3)\n",
     "\n",
     "for elem1 in templates_4:\n",
     "    for elem2 in templates_4:\n",
-    "        templates_5.add((elem1, elem2))\n",
+    "        all_trees.add((elem1, elem2))\n",
+    "        \n",
+    "#save\n",
+    "import pickle\n",
+    "with open('files/all_trees.pickle', 'wb') as f:\n",
+    "    pickle.dump(all_trees, f)\n",
     "    \n",
-    "\n",
-    "templates_5"
+    "len(all_trees)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Set of all rhythms"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "str"
+       "65536"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type((\"[p1]\"))"
+    "all_rhythms = set()\n",
+    "\n",
+    "for i in range(2**16): # populating\n",
+    "    all_rhythms.add( tuple((\"{0:0%sb}\" %L).format(i)) )\n",
+    "    \n",
+    "#save\n",
+    "import pickle\n",
+    "with open('files/all_rhythms.pickle', 'wb') as f:\n",
+    "    pickle.dump(all_rhythms, f)\n",
+    "    \n",
+    "len(all_rhythms)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2-way dictionnary between sets of trees and rhythms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2-ways dictionary, not too slow...\n",
+    "class bidict(dict):\n",
+    "    def __init__(self, *args, **kwargs):\n",
+    "        super(bidict, self).__init__(*args, **kwargs)\n",
+    "        self.inverse = {}\n",
+    "        for key, value in self.items():\n",
+    "            self.inverse.setdefault(value,[]).append(key) \n",
+    "\n",
+    "    def __setitem__(self, key, value):\n",
+    "        if key in self:\n",
+    "            self.inverse[self[key]].remove(key) \n",
+    "        super(bidict, self).__setitem__(key, value)\n",
+    "        self.inverse.setdefault(value,[]).append(key)        \n",
+    "\n",
+    "    def __delitem__(self, key):\n",
+    "        self.inverse.setdefault(self[key],[]).remove(key)\n",
+    "        if self[key] in self.inverse and not self.inverse[self[key]]: \n",
+    "            del self.inverse[self[key]]\n",
+    "        super(bidict, self).__delitem__(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tree_to_rhythm(tree, size=L):    \n",
+    "    if(p2 == tree):\n",
+    "        tup = ('1',) + ('0',) * int(size-1)\n",
+    "        return tup    \n",
+    "    elif(p3 == tree):\n",
+    "        tup = ('0',) * int(size)\n",
+    "        return tup    \n",
+    "    else:\n",
+    "        return tree_to_rhythm(tree[0], size/2) + tree_to_rhythm(tree[1], size/2)\n",
+    "    \n",
+    "tree2rhythm = bidict()\n",
+    "\n",
+    "for tree in all_trees:\n",
+    "    tree2rhythm[tree] = tree_to_rhythm(tree)\n",
+    "    \n",
+    "#save\n",
+    "import pickle\n",
+    "with open('files/tree2rhythm.pickle', 'wb') as f:\n",
+    "    pickle.dump(tree2rhythm, f)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -134,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
