2way dict between trees and templates

--- a/Pipeline.ipynb
+++ b/Pipeline.ipynb
@@ -241,7 +241,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2-way dictionnary between sets of trees and rhythms"
+    "# 2-way dictionnary between trees and rhythms"
    ]
   },
   {
@@ -391,7 +391,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Set of all templates (?)"
+    "# Set of all templates (useful?)"
    ]
   },
   {
@@ -452,42 +452,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 119,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((((p3, p2), (p2, p3)), ((p2, p2), p2)), (((p2, p2), p3), (p3, (p2, p3))))"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "e"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tuple"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lo = ()"
+    "def tree_to_template(tree, depth=0):\n",
+    "    if isinstance(tree, tuple) and depth<3:\n",
+    "        return (tree_to_template(tree[0], depth+1), tree_to_template(tree[1], depth+1))\n",
+    "    \n",
+    "    if isinstance(tree, tuple):\n",
+    "        return tuple()\n",
+    "    \n",
+    "    return tree\n",
+    "\n",
+    "trees2templates = bidict() # initial bidirection dictionary (can't be stored with pickle.....)\n",
+    "\n",
+    "for tree in all_trees:\n",
+    "    trees2templates[tree] = tree_to_template(tree)\n",
+    "    \n",
+    "# 2 dict for the 2 directions \n",
+    "template2trees = trees2templates.inverse\n",
+    "tree2template  = dict(trees2templates)\n",
+    "\n",
+    "#save\n",
+    "import pickle\n",
+    "with open('files/tree2template.pickle', 'wb') as f:\n",
+    "    pickle.dump(tree2template, f)\n",
+    "with open('files/template2trees.pickle', 'wb') as f:\n",
+    "    pickle.dump(template2trees, f)"
    ]
   },
   {
